<resources>
    <string name="app_name">Traveller</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Dashboard</string>
    <string name="second_fragment_label">Gallery</string>
    <string name="fragment_first_display_photos_button_text">Display Photos</string>
    <string name="previous">Previous</string>

    <string name="first_fragment_welcome_text">Hi there! Click the "add button" to take a picture and optionally add description.</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="camera_take_a_picture_button_text">Take a picture</string>
    <string name="camera_confirm_button_text">Save</string>
    <string name="item_entry_country_textView_text">Country</string>
    <string name="item_entry_place_textView_text">Place</string>
    <string name="item_entry_date_textView">Date</string>
    <string name="camera_note_editText_hint">Enter your note here</string>
    <string name="notification_channel_id">123</string>
    <string name="notification_title">Searching for visited locations nearby</string>
    <string name="notification_cancel">Cancel</string>
</resources>